--- a/src/config/common.yaml
+++ b/src/config/common.yaml
@@ -1,29 +1,31 @@
 comment: None
 total_steps: 1e6
-n_envs: 1
+n_envs: 16
 render: False
 device: "cuda"
-is_wandb: True
+is_wandb: False
 project: ${env.env_id}_irdd
 
 env:
   r_gamma: 0.99
   test_end_id: ${env.env_id}
 
-gen:
-  model: PPO2
-  lr: 3e-4
-  batch_size: 64
-  target_kl: 0.1
-  n_epochs: 20
-  ent_coef: 1e-2
-
 disc:
   demo_batch_size: 2048
   gen_replay_buffer_capacity: 4096
-  n_disc_updates_per_round: 10
+  n_disc_updates_per_round: 30
   lr: 3e-4
   hid_size: 16
+  normalize: RunningNorm
+
+gen:
+  model: PPO2
+  lr: 1e-3
+  batch_size: 256
+  target_kl: 0.1
+  n_epochs: 60
+  ent_coef: 1e-4
+  n_steps: ${disc.gen_replay_buffer_capacity//n_envs}
 
 defaults:
   - env: serving
