--- a/src/config/common.yaml
+++ b/src/config/common.yaml
@@ -1,6 +1,6 @@
 comment: None
 total_steps: 1e6
-n_envs: 16
+n_envs: 4
 render: False
 device: "cuda"
 is_wandb: False
@@ -11,21 +11,22 @@ env:
   test_end_id: ${env.env_id}
 
 disc:
-  demo_batch_size: 2048
-  gen_replay_buffer_capacity: 4096
-  n_disc_updates_per_round: 30
+  demo_batch_size: 1600
+  gen_replay_buffer_capacity: 3200
+  n_disc_updates_per_round: 10
   lr: 3e-4
   hid_size: 16
-  normalize: RunningNorm
+  normalize: None
 
 gen:
   model: PPO2
-  lr: 1e-3
-  batch_size: 256
+  lr: 3e-5
+  batch_size: 160
   target_kl: 0.1
   n_epochs: 60
   ent_coef: 1e-4
-  n_steps: ${disc.gen_replay_buffer_capacity//n_envs}
+  # n_steps: ${disc.gen_replay_buffer_capacity//n_envs}
+  n_steps: 100
 
 defaults:
   - env: serving
